cabal-version: 1.12
name:           generic-unification
version:        0.1.0.0
synopsis:       Unification for free!
description:    This package provides automatic deriving mechanism for unification algorithm.
                .
                See <Data-Unification-Generic.html Module documentation> for more information.
category:       Web
homepage:       https://github.com/konn/generic-unification#readme
bug-reports:    https://github.com/konn/generic-unification/issues
author:         Hiromi ISHII
maintainer:     konn.jinro _at_ gmail.com
copyright:      2015 (c) Hiromi ISHII
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/konn/generic-unification

library
  exposed-modules:
      Data.Unification.Generic
  other-modules:
      Data.Unification.Variable
      Paths_generic_unification
  hs-source-dirs:
      src
  default-extensions: DeriveGeneric GADTs TypeFamilies MultiParamTypeClasses DeriveAnyClass DeriveFunctor GeneralizedNewtypeDeriving TypeOperators DefaultSignatures FlexibleContexts
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , containers
    , deriving-compat
    , hashable
    , mtl
    , transformers
    , union-find
    , unordered-containers
  default-language: Haskell2010

test-suite generic-unification-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_generic_unification
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , generic-unification
  default-language: Haskell2010
